--- a/index.html
+++ b/index.html
@@ -4,53 +4,91 @@
   <meta charset="UTF-8">
   <title>AI Undangan Online</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <style>
-    body{
-      margin:0;
-      font-family: Arial, sans-serif;
-      background:#0b0b10;
-      color:white;
-      text-align:center;
-      padding:40px 20px;
-    }
-    h1{color:#ff2f44;}
-    .card{
-      max-width:420px;
-      margin:auto;
-      background:#161622;
-      padding:20px;
-      border-radius:14px;
-    }
-    .btn{
-      display:block;
-      margin-top:15px;
-      padding:12px;
-      border-radius:10px;
-      text-decoration:none;
-      background:#ff2f44;
-      color:white;
-      font-weight:bold;
-    }
-    .price-old{
-      text-decoration:line-through;
-      color:#aaa;
-    }
-    .wa-float{
-      position:fixed;
-      right:20px;
-      bottom:20px;
-      width:56px;
-      height:56px;
-      background:#25D366;
-      border-radius:50%;
-      display:flex;
-      align-items:center;
-      justify-content:center;
-      font-size:26px;
-      color:white;
-      text-decoration:none;
-    }
-  </style>
+<style>
+  body{
+    margin:0;
+    font-family: 'Segoe UI', Arial, sans-serif;
+    background: radial-gradient(circle at top, #1a1a2e, #0b0b10);
+    color:white;
+    text-align:center;
+    padding:60px 20px;
+  }
+
+  .card{
+    max-width:420px;
+    margin:auto;
+    background: linear-gradient(180deg, #1c1c2b, #141421);
+    padding:28px 22px;
+    border-radius:18px;
+    box-shadow: 0 20px 40px rgba(0,0,0,0.5);
+  }
+
+  img{
+    margin-bottom:20px;
+  }
+
+  h1{
+    color:#ff2f44;
+    margin-bottom:10px;
+    font-size:26px;
+  }
+
+  p{
+    color:#cfcfd8;
+    font-size:14px;
+    margin-bottom:22px;
+  }
+
+  .price-old{
+    text-decoration:line-through;
+    color:#888;
+    font-size:14px;
+    margin-bottom:4px;
+  }
+
+  h2{
+    font-size:22px;
+    margin-bottom:20px;
+  }
+
+  .btn{
+    display:block;
+    padding:14px;
+    border-radius:12px;
+    text-decoration:none;
+    background: linear-gradient(135deg, #ff2f44, #ff5a6d);
+    color:white;
+    font-weight:bold;
+    font-size:16px;
+    transition: transform 0.15s ease;
+  }
+
+  .btn:active{
+    transform: scale(0.97);
+  }
+
+  .wa-float{
+    position:fixed;
+    right:20px;
+    bottom:20px;
+    width:56px;
+    height:56px;
+    background:#25D366;
+    border-radius:50%;
+    display:flex;
+    align-items:center;
+    justify-content:center;
+    font-size:26px;
+    color:white;
+    text-decoration:none;
+    box-shadow: 0 10px 25px rgba(0,0,0,0.4);
+    z-index:999;
+  }
+
+  .wa-float:active{
+    transform: scale(0.95);
+  }
+</style>
 </head>
 <body>
 
