--- a/index.html
+++ b/index.html
@@ -4,108 +4,162 @@
   <meta charset="UTF-8">
   <title>AI Undangan Online</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<style>
-  body{
-    margin:0;
-    font-family: 'Segoe UI', Arial, sans-serif;
-    background: radial-gradient(circle at top, #1a1a2e, #0b0b10);
-    color:white;
-    text-align:center;
-    padding:60px 20px;
-  }
 
-  .card{
-    max-width:420px;
-    margin:auto;
-    background: linear-gradient(180deg, #1c1c2b, #141421);
-    padding:28px 22px;
-    border-radius:18px;
-    box-shadow: 0 20px 40px rgba(0,0,0,0.5);
-  }
+  <style>
+    body{
+      margin:0;
+      font-family: 'Segoe UI', Arial, sans-serif;
+      background: radial-gradient(circle at top, #1a1a2e, #0b0b10);
+      color:white;
+      padding:60px 20px;
+      text-align:center;
+    }
 
-  img{
-    margin-bottom:20px;
-  }
+    .card{
+      max-width:420px;
+      margin:auto;
+      background: linear-gradient(180deg, #1c1c2b, #141421);
+      padding:28px 22px;
+      border-radius:18px;
+      box-shadow: 0 20px 40px rgba(0,0,0,0.5);
+    }
 
-  h1{
-    color:#ff2f44;
-    margin-bottom:10px;
-    font-size:26px;
-  }
+    img{
+      width:120px;
+      margin-bottom:20px;
+    }
 
-  p{
-    color:#cfcfd8;
-    font-size:14px;
-    margin-bottom:22px;
-  }
+    h1{
+      color:#ff2f44;
+      font-size:26px;
+      margin-bottom:10px;
+    }
 
-  .price-old{
-    text-decoration:line-through;
-    color:#888;
-    font-size:14px;
-    margin-bottom:4px;
-  }
+    p{
+      color:#cfcfd8;
+      font-size:14px;
+      margin-bottom:22px;
+    }
 
-  h2{
-    font-size:22px;
-    margin-bottom:20px;
-  }
+    .price-old{
+      text-decoration:line-through;
+      color:#888;
+      font-size:14px;
+    }
 
-  .btn{
-    display:block;
-    padding:14px;
-    border-radius:12px;
-    text-decoration:none;
-    background: linear-gradient(135deg, #ff2f44, #ff5a6d);
-    color:white;
-    font-weight:bold;
-    font-size:16px;
-    transition: transform 0.15s ease;
-  }
+    h2{
+      font-size:22px;
+      margin:10px 0 20px;
+    }
 
-  .btn:active{
-    transform: scale(0.97);
-  }
+    .btn{
+      display:block;
+      padding:14px;
+      border-radius:12px;
+      text-decoration:none;
+      background: linear-gradient(135deg, #ff2f44, #ff5a6d);
+      color:white;
+      font-weight:bold;
+      font-size:16px;
+    }
 
-  .wa-float{
-    position:fixed;
-    right:20px;
-    bottom:20px;
-    width:56px;
-    height:56px;
-    background:#25D366;
-    border-radius:50%;
-    display:flex;
-    align-items:center;
-    justify-content:center;
-    font-size:26px;
-    color:white;
-    text-decoration:none;
-    box-shadow: 0 10px 25px rgba(0,0,0,0.4);
-    z-index:999;
-  }
+    .section{
+      margin-top:30px;
+      text-align:left;
+    }
 
-  .wa-float:active{
-    transform: scale(0.95);
-  }
-</style>
+    .section h3{
+      margin-bottom:8px;
+    }
+
+    ul{
+      font-size:14px;
+      color:#bdbdc7;
+      padding-left:18px;
+      margin-top:0;
+    }
+
+    hr{
+      border:0;
+      border-top:1px solid #333;
+      margin:20px 0;
+    }
+
+    .wa-float{
+      position:fixed;
+      right:20px;
+      bottom:20px;
+      width:56px;
+      height:56px;
+      background:#25D366;
+      border-radius:50%;
+      display:flex;
+      align-items:center;
+      justify-content:center;
+      font-size:26px;
+      color:white;
+      text-decoration:none;
+      box-shadow: 0 10px 25px rgba(0,0,0,0.4);
+      z-index:999;
+    }
+  </style>
 </head>
+
 <body>
 
   <div class="card">
-    <img src="logo.png" width="120" alt="Eta Web">
+    <img src="logo.png" alt="Eta Web">
+
     <h1>AI Undangan Online</h1>
-    <p>Buat undangan digital langsung dari HP</p>
+    <p>Buat undangan digital pernikahan & acara lainnya langsung dari HP</p>
 
-    <p class="price-old">Rp100.000</p>
-    <h2>Rp30.000 / 30 hari</h2>
+    <div class="price-old">Rp100.000</div>
+    <h2>🔥 Rp30.000 / 30 hari</h2>
 
-    <a class="btn" href="https://wa.me/6285719575100?text=Mau%20order%20paket%20promo%20dong" target="_blank">
+    <a
+      href="https://wa.me/6285719575100?text=Mau%20order%20paket%20promo%20dong"
+      target="_blank"
+      class="btn"
+    >
       Order via WhatsApp
     </a>
+
+    <div class="section">
+      <h3>FREE</h3>
+      <ul>
+        <li>Template dasar</li>
+        <li>Edit teks undangan</li>
+        <li>Bisa dibuka di HP</li>
+        <li>Tidak ada AI</li>
+      </ul>
+
+      <hr>
+
+      <h3 style="color:#ff2f44;">PRO (PROMO)</h3>
+      <ul>
+        <li>Semua template premium</li>
+        <li>AI teks undangan otomatis</li>
+        <li>Link undangan siap share</li>
+        <li>QR Code undangan</li>
+        <li>Berlaku 30 hari</li>
+      </ul>
+
+      <a
+        href="https://wa.me/6285719575100?text=Mau%20order%20paket%20promo%20dong"
+        target="_blank"
+        class="btn"
+        style="margin-top:16px;"
+      >
+        Upgrade ke PRO
+      </a>
+    </div>
   </div>
 
-  <a class="wa-float" href="https://wa.me/6285719575100?text=Mau%20order%20paket%20promo%20dong" target="_blank">
+  <a
+    href="https://wa.me/6285719575100?text=Mau%20order%20paket%20promo%20dong"
+    target="_blank"
+    class="wa-float"
+  >
     💬
   </a>
 
